--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -1,7 +1,44 @@
-<head>
-	<title>asdfinance</title>
-	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-</head>
-<body>
-	<div class="bit-font"></div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>asdfinance</title>
+
+    <!-- Bootstrap -->
+    <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="../../public/css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Welcome to <span class="bit-font">asdfinance</span></h1>
+
+    <h2>Please insert your relevant financial inforomation so we can get you set up:</h2>
+
+    <div ng-controller="dataController">
+    	<form novalidate class="simple-form">
+	    Total amount to spend: <input type="text" ng-model="user.total" /><br />
+
+	    category: <input type="text" ng-model="user.category" /><br />
+	    Total amount to spend: <input type="text" ng-model="user.total" /><br />
+
+	    <input type="button" ng-click="reset()" value="Reset" />
+	    <input type="submit" ng-click="update(user)" value="Save" />
+	  </form>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="../../public/js/bootstrap.min.js"></script>
+  </body>
+</html>
