--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -19,41 +19,50 @@
     <script src="../Controllers/form.js"></script>
   </head>
   <body>
-    <h1>Welcome to <span class="bit-font">asdfinance</span></h1>
-
-    <h2>Please insert your relevant financial inforomation so we can get you set up:</h2>
-
-    <h4>
-    	We will collect information about your overall budget and how you would like to break down your budget, so we can help you monitor it
-    </h4>
-
-    <div ng-controller="dataController">
-    	<div>
-    		<form novalidate class="simple-form">
-	    	Total amount to spend: <input type="text" ng-model="user.total" /><br />
+  	<div class="container-fluid">
+  		<div class="row">
+	    	<h1 class = "col-md-6 col-md-offset-3 col-xs-6">Welcome to <span class="bit-font">asdfinance</span></h1>
 	    </div>
 
-	    <br />
-	    <div class="category" id="1">
-	    	Food: <input type="text" ng-model="user.food" /><br />
-	    	% to spend: <input type="text" ng-model="user.percent1" /><br />
-	    </div>
+	    <div class="row">
+		    <h2 class="col-md-8">Please insert your relevant financial inforomation so we can get you set up:</h2>
+		</div>
 
-	    <br />
-	    <div class="category" id="2">
-	    	Necessities: <input type="text" ng-model="user.necessities" /><br />
-	    	% to spend: <input type="text" ng-model="user.percent1" /><br />
-	    </div>
+		<div class="row">
+			<h4 lass="col-md-offset-1 col-md-8">
+		    	We will collect information about your overall budget and how you would like to break down your budget, so we can help you monitor it
+		    </h4>
+		</div>
 
-	    <br />
-	    <div class="category" id="3">
-	    	Entertainment: <input type="text" ng-model="user.entertainment" /><br />
-	    	% to spend: <input type="text" ng-model="user.percent1" /><br />
-	    </div>
+	    <div ng-controller="dataController">
+	    	<div>
+	    		<form novalidate class="simple-form">
+		    	Total amount to spend: <input type="text" ng-model="user.total" /><br />
+		    </div>
 
-	    <input type="button" ng-click="reset()" value="Reset" />
-	    <input type="submit" ng-click="update(user)" value="Save" />
-	  </form>
+		    <br />
+		    <div class="category" id="1">
+		    	Food: <input type="text" ng-model="user.food" /><br />
+		    	% to spend: <input type="text" ng-model="user.percent1" /><br />
+		    </div>
+
+		    <br />
+		    <div class="category" id="2">
+		    	Necessities: <input type="text" ng-model="user.necessities" /><br />
+		    	% to spend: <input type="text" ng-model="user.percent1" /><br />
+		    </div>
+
+		    <br />
+		    <div class="category" id="3">
+		    	Entertainment: <input type="text" ng-model="user.entertainment" /><br />
+		    	% to spend: <input type="text" ng-model="user.percent1" /><br />
+		    </div>
+
+		    <input type="button" ng-click="reset()" value="Reset" />
+		    <input type="submit" ng-click="update(user)" value="Save" />
+		  </form>
+		</div>
+	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
