--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
+.title-main{
+	background-color: #5394fc;
+}
+
 .bit-font {
 	font-family: 'Press Start 2P', cursive;
+}
+
+.formContainer {
+	padding-top: 10px;
 }
