--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -65,9 +65,32 @@
 			  </div>
 			</form>
 		</div>
+		<div class="row">
+			<div class="col-sm-offset-2 col-sm-6">
+				<!-- Button trigger modal -->
+				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+				  View my Budget Breakdown
+				</button>
+			</div>
+		</div>
 	</div>
 
-	<canvas id="myChart" width="400" height="400"></canvas>
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Your Breakdown</h4>
+	      </div>
+	      <div class="modal-body">
+	        <canvas id="myChart" width="200" height="200"></canvas>
+	        <canvas id="myChart2" width="200" height="200"></canvas>
+	      </div>
+
+	    </div>
+	  </div>
+	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
