--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -76,16 +76,18 @@
 	</div>
 
 	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="graphModal">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Your Breakdown</h4>
+	        <h4 class="modal-title" id="graphModal">Your Breakdown</h4>
 	      </div>
 	      <div class="modal-body">
-	        <canvas id="myChart" width="200" height="200"></canvas>
-	        <canvas id="myChart2" width="200" height="200"></canvas>
+	      	<h4 class="centered"> Your Ideal Budget Breakdown </h4>
+	        <canvas id="actualPie" width="200" height="200"></canvas>
+	        <h4 class="centered"> Your Ideal Breakdown vs. Your Actual Breakdown </h4>
+	        <canvas id="compRadar" width="200" height="200"></canvas>
 	      </div>
 
 	    </div>
