--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="userForm">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -93,14 +93,14 @@
 	    </div>
 	  </div>
 	</div>
-
+	<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../../public/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script src="../../public/js/angular.min.js"></script>
-
+	
     <script src="../Controllers/form.js"></script>
     </script>
   </body>
