--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -84,8 +84,16 @@
 	        <h4 class="modal-title" id="graphModal">Your Breakdown</h4>
 	      </div>
 	      <div class="modal-body">
-	      	<h4 class="centered"> Your Ideal Budget Breakdown </h4>
-	        <canvas id="actualPie" width="200" height="200"></canvas>
+	      	<div class="row">
+	      		<div class="col-sm-6">
+		      		<h4 class="centered"> Your Ideal Budget Breakdown </h4>
+		        	<canvas id="actualPie" width="200" height="200"></canvas>
+		        </div>
+		        <div class="col-sm-6">
+		      		<h4 class="centered"> Your Actual Budget Breakdown </h4>
+		        	<canvas id="idealPie" width="200" height="200"></canvas>
+		        </div>
+		    </div>
 	        <h4 class="centered"> Your Ideal Breakdown vs. Your Actual Breakdown </h4>
 	        <canvas id="compRadar" width="200" height="200"></canvas>
 	      </div>
