--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -84,17 +84,21 @@
 	      </div>
 	      <div class="modal-body">
 	      	<div class="row">
-	      		<div class="col-sm-6">
+	      		<div class="col-sm-6 graphContainer">
 		      		<h4 class="centered"> Your Ideal Budget Breakdown </h4>
 		        	<canvas id="actualPie" width="200" height="200"></canvas>
 		        </div>
-		        <div class="col-sm-6">
+		        <div class="col-sm-6 graphContainer">
 		      		<h4 class="centered"> Your Actual Budget Breakdown </h4>
 		        	<canvas id="idealPie" width="200" height="200"></canvas>
 		        </div>
 		    </div>
-	        <h4 class="centered"> Your Ideal Breakdown vs. Your Actual Breakdown </h4>
-	        <canvas id="compRadar" width="200" height="200"></canvas>
+		    <div class="row">
+		    	<div class="col-sm-12 graphContainer">
+	        		<h4 class="centered"> Your Ideal Breakdown vs. Your Actual Breakdown </h4>
+	        		<canvas id="compRadar" width="200" height="200"></canvas>
+	        	</div>
+	        </div>
 	      </div>
 
 	    </div>
