--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -42,19 +42,19 @@
 			  <div class="form-group">
 			    <label class="control-label col-sm-2" for="food">Food:</label>
 			    <div class="col-sm-6">
-			      <input type="text" class="form-control" id="food" ng-model="user.percent" placeholder="Enter % to spend">
+			      <input type="text" class="form-control" id="food" ng-model="user.food" placeholder="Enter % to spend">
 			    </div>
 			  </div>
 			  <div class="form-group">
 			    <label class="control-label col-sm-2" for="necessities">Necessities:</label>
 			    <div class="col-sm-6"> 
-			      <input type="text" class="form-control" id="necessities" ng-model="user.percent" placeholder="Enter % to spend">
+			      <input type="text" class="form-control" id="necessities" ng-model="user.necessities" placeholder="Enter % to spend">
 			    </div>
 			  </div>
 			  <div class="form-group">
 			    <label class="control-label col-sm-2" for="entertainment">Entertainment:</label>
 			    <div class="col-sm-6"> 
-			      <input type="text" class="form-control" id="entertainment" ng-model="user.percent" placeholder="Enter % to spend">
+			      <input type="text" class="form-control" id="entertainment" ng-model="user.entertainment" placeholder="Enter % to spend">
 			    </div>
 			  </div>
 			  <div class="form-group"> 
