--- a/enterprise/Views/main.html
+++ b/enterprise/Views/main.html
@@ -84,7 +84,7 @@
 	      </div>
 	      <div class="modal-body">
 	      	<div class="row">
-	      		<div id="actualGraph class="col-sm-6 graphContainer">
+	      		<div id="actualGraph" class="col-sm-6 graphContainer">
 		      		<h4 class="centered"> Your Ideal Budget Breakdown </h4>
 		        	<canvas id="actualPie" width="200" height="200"></canvas>
 		        	<div class="checkbox">
